--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ const fruitTypes = [
 function preload() {
     // 加载水果图片
     for (let i = 1; i <= 11; i++) {
-        this.load.svg(`fruit${i}`, `images/fruit${i}.svg`);
+        this.load.svg(`fruit${i}`, `fruit${i}.svg`);
     }
 }
 
